--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ python-dotenv==1.0.0
 redis==5.0.1
 reportlab==4.0.9
 six==1.17.0
-SQLAlchemy==2.0.36
+SQLAlchemy>=2.0.36
 tomli==2.4.0
 typing_extensions==4.15.0
 tzdata==2025.3
