Switch to PyMuPDF

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ marshmallow==3.20.2
 packaging==26.0
 pdf2image==1.17.0
 pillow==12.1.0
+pymupdf>=1.23.0
 prompt_toolkit==3.0.52
 pypdf>=4.0.0
 python-dateutil==2.9.0.post0
